* Fixed spacing for headings on all pages * Fixed image on locatoin page banner * Modified director 1 image

--- a/css/bundle.css
+++ b/css/bundle.css
@@ -1593,8 +1593,8 @@ strong {
 
 .page-header {
     background: #f8f9fa;
-    padding: 2rem 0;
-    margin-top: 70px;
+    padding: 1.2rem 0;
+    margin-top: 0;
 }
 .page-header h1 {
     font-size: 2.5rem;
